2001-11-08  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Build a structs hash and gen the structs
	after the first pass of the defs.  For structs and functions, mangle
	the 100s of params/fields named object to objekt. Insert using stmnts
	for structs too.
	* codegen/hardcoded.defs : Add GtkAccelEntry struct.

2001-11-07  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl (gen_object): Insert using statements. Insert 
	class members from corresponding .custom file.  
	* gtk/Window.custom : Renamed file from Window.cs.  Removed all the
	automatically generated members.  This will be the mechanism used to
	improve upon the mechanically generated binding.

2001-11-05  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl (gen_object): Generate a ctor (IntPtr obj) for
	every object.  This is a wrapper constructor for use by an Object
	manager which will be called by GLib.Object.GetObject eventually to
	wrap raw GObject pointers returned by methods/props.

2001-11-04  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : struct generation.  Added float and double
	type mapping entries.
	* codegen/hardcoded.defs : GdkGeometry definition.  define-struct
	doesn't appear to be supported in the current defs files.  This file
	will be used for manual definition of unsupported defs.
	* codegen/makefile : add hardcoded.defs.

2001-11-02  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : define-struct detection.  Partial ctor
	support.  Still need to deal with ctor signiature collisions.
	Refactored gen_method to share get_param_strings with ctors.

2001-10-30  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : streamline mkdir stuff.  Prune the object
	list back to just Window for now. Suppress generation of the Prop
	get/set accessor methods.
	* codegen/gdk-types.defs : Updated the 2button/3button event types
	since I don't feel like automangling them now.