@@ -1,3 +1,10 @@
+2001-11-09  Mike Kestner <mkestner@speakeasy.net>
+
+	* codegen/defs-parse.pl : Now genning Window, AccelGroup, Bin, and
+	GdkPixbuf classes to peel the csc error onion. Explicitly add GObject
+	to the "exists ($objects{...})" branches, since GObject is a hard
+	coded Class.
+
 2001-11-08  Mike Kestner <mkestner@speakeasy.net>
 
 	* codegen/defs-parse.pl : Build a structs hash and gen the structs
